# mujoco_ros2_simulation

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  mujoco_system_interface_plugin.xml  package.xml  pixi.toml
.github/workflows/: ci.yaml
docker/: Dockerfile
docs/: TOOLS.md
include/mujoco_ros2_control/: data.hpp  mujoco_system_interface.hpp
include/mujoco_ros2_simulation/: data.hpp  mujoco_cameras.hpp  mujoco_system_interface.hpp
scripts/: make_mjcf_from_robot_description.py
src/: mujoco_cameras.cpp  mujoco_lidar.cpp  mujoco_system_interface.cpp
test/: CMakeLists.txt
test/config/: mujoco_pid.yaml
test/launch/: test_robot.launch.py
test/resources/: test_robot.urdf
test/src/: robot_launch_test.py
test/test_resources/: test_inputs.xml  test_robot.urdf  test_robot.xml
